Bug 322219 - Should not ask for wallet access when no password is used
Summary: Should not ask for wallet access when no password is used
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Ubuntu Linux
: NOR minor
Target Milestone: 1.0
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-10 21:33 UTC by Petter Reinholdtsen
Modified: 2024-12-23 18:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Petter Reinholdtsen 2013-07-10 21:33:47 UTC
This was initially reported as Debian bug http://bugs.debian.org/715821 .

When using the KDE network manager widget to connect to a open wifi network, a popup show up after setting up the network details, asking for access to the KDE wallet.  I do not use the KDE wallet, and there is no password involved in connecting
to the wireless network in question.

Please change the KDE network manager widget to stop trying to access the KDE wallet when no password is involved in accessing a wireless network.

The same problem also exist in Kubuntu Raring.


Reproducible: Always

Steps to Reproduce:
1. Start with a freshly installed machine with a fresh user with no KDE wallet set up.
2. Use the KDE network manager widget to connect to a wireless network without any password proection.
3. Watch the kwallet popup show up.
Actual Results:  
Useless kwallet request show up.

Expected Results:  
Only kwallet request showing up when there is a password involved.
Comment 1 Lamarque V. Souza 2013-07-10 21:53:43 UTC
Plasma NM just relays the NetworkManager's request for new secrets, this should be fixed in NetworkManager itself.

PS: plain text support will probably be removed in future Plasma NM versions, that is, kwallet is will be mandatory.
Comment 2 Petter Reinholdtsen 2014-07-04 08:02:58 UTC
I just tested in Debian Jessie and the problem is still there in version 0.9.3.3-3.  Connecting to an open wifi network with no password required still pop up the kwallet question.

> Plasma NM just relays the NetworkManager's request for new secrets, this should be fixed in NetworkManager itself.

Aha.  Where in the code is this done?  What kind of request is this?  I ask because I would like to have a look at this myself, but do not know the code yet.

> PS: plain text support will probably be removed in future Plasma NM versions, that is, kwallet is will be mandatory.

Is this comment related to this issue, where no password is involved at all?
Comment 3 Jan Grulich 2014-07-04 08:33:47 UTC
What version of NetworkManager do you have? I just tested it with the latest one (development version available in Fedora) and I'm not able to reproduce your issue.
Comment 4 Petter Reinholdtsen 2014-07-04 08:47:20 UTC
[Jan Grulich]
> What version of NetworkManager do you have? I just tested it with
> the latest one (development version available in Fedora) and I'm not
> able to reproduce your issue.

Thank you very much for trying to reproduce this. :)

The network-manager package in Debian Jessie is version 0.9.8.10-3.  I
am testing on a freshly installed machine with a freshly created user.

The popup that show up is the "configure kwallet" dialog, which I
guess only happen once per user.  As I do not use it and do not plan
to use it, I press 'cancel' every time it pop up.
Comment 5 Lamarque V. Souza 2014-07-04 13:29:28 UTC
(In reply to comment #2)
> I just tested in Debian Jessie and the problem is still there in version
> 0.9.3.3-3.  Connecting to an open wifi network with no password required
> still pop up the kwallet question.

As I said this problem resides in NetworkManager itself, upgrading Plasma NM to a newer version would not fix that. Here is the list of upstream bugs related to this problem:

https://bugzilla.gnome.org/show_bug.cgi?id=665680
See link in comment #24. NM 0.9.8 fixed one issue related to asking for passwords too often. However, NM still asks for password in other situations.

https://bugzilla.gnome.org/show_bug.cgi?id=686308 
https://bugzilla.gnome.org/show_bug.cgi?id=731099
https://bugzilla.gnome.org/show_bug.cgi?id=638180
https://bugzilla.gnome.org/show_bug.cgi?id=697010
 
See that none of the bugs above is related to Plasma NM or KDE whatsoever.

> > Plasma NM just relays the NetworkManager's request for new secrets, this should be fixed in NetworkManager itself.
> 
> Aha.  Where in the code is this done?  What kind of request is this?  I ask
> because I would like to have a look at this myself, but do not know the code
> yet.

Download NetworkManager's source and and look at file NetworkManager/src/devices/wifi/nm-device-wifi.c: handle_ip_config_timeout() is the function that keeps asking passwords for WEP connections and handle_8021x_or_psk_auth_fail() for the other types.
 
There are other code path for the other connection types.

> > PS: plain text support will probably be removed in future Plasma NM versions, that is, kwallet is will be mandatory.
> 
> Is this comment related to this issue, where no password is involved at all?

In the original report there is this sentence: "I do not use the KDE wallet, ..." If kwallet is disabled then Plasma NM falls back to plain text password file. There are discussions to make kwallet mandatory for all KDE programs in the future, including Plasma NM. I also do not like plain text passwords.

Can you check in the connection editing dialog, in "Wireless Security" tab what is selected in the "Security" combobox? If you do not use secrets that setting must be set to "None", otherwise NetworkManager will "think" there is a need for asking for secrets when the connection activation fails.
Comment 6 Mark 2016-06-24 17:50:13 UTC
I have the exact same issue (on a WPA2 connection though), and i *really really really* HATE it! I always have this issue and always have to spend hours working through hoops to get my connection to work...

I disabled KWallet. I don't use it and i don't want to use it! I'm the only user on the computer. I don't give a damn if the passwords are stored in plain text.

So what do i have now. I have an extremely vague popup asking me (in the exact words): "For accessing the wireless netword <snip> you need to provide a password below"

Can it be any more cryptic?
I tried my user password (not working).
I tried the root password (not working).
I tried the wifi password (not working).
Or even my kwallet password which is non existing...

WHICH PASSWORD!?!?!

Please, really... Make the dialog intuitive! I'm much faster off now by just not using networkmanager for password protected connections then using it.

What i *guess* is happening is plasma-nm probably trying to out smart me (it fails at that) and trying to ask for a password to unlock kwallet. Which it won't be able to since that service is shut down.

Also, this just works in Gnome/Unity. Why do i have to go through hoops to get it working in plasma? That really smells fishy to me.

I guess my only way to get this working at this moment is apparently accepting the use of kwallet which will give me access to my wifi... I refuse to do that!

Please do not make kwallet mandatory!
Comment 7 Jan Grulich 2016-06-27 06:47:04 UTC
Git commit 1b81d5f6a1f2516964fff94d20bd485aead5943c by Jan Grulich.
Committed on 27/06/2016 at 06:46.
Pushed by grulich into branch 'master'.

Store password into NetworkManager by default when KWallet is not enabled

M  +14   -3    libs/editor/widgets/passwordfield.cpp

http://commits.kde.org/plasma-nm/1b81d5f6a1f2516964fff94d20bd485aead5943c
Comment 8 Jan Grulich 2016-06-27 06:48:03 UTC
Git commit 8f3803202c4e5fc3502ee04d548d97d6d70a97e8 by Jan Grulich.
Committed on 27/06/2016 at 06:47.
Pushed by grulich into branch 'Plasma/5.7'.

Store password into NetworkManager by default when KWallet is not enabled

M  +14   -3    libs/editor/widgets/passwordfield.cpp

http://commits.kde.org/plasma-nm/8f3803202c4e5fc3502ee04d548d97d6d70a97e8
Comment 9 Ben Cooksley 2024-12-23 18:23:45 UTC
Bulk transfer as requested in T17796