Store password into NetworkManager by default when KWallet is not enabled

BUG:322219